--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "crawl-data",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "adm-zip": "^0.5.9",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.30.7"
+    "sharp": "^0.30.7",
+    "videoshow": "^0.1.12"
   },
   "devDependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "body-parser": "^1.20.0",
     "nodemon": "^2.0.19"
   }
 }
